--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,11 @@ body{
     background-color: white;
    max-width: 100vw;
     height: 60px;
+}
     
-    
+  .list  #nav{
+      display: none;
+  }
     
 }
 .list{
@@ -71,9 +74,7 @@ body{
     color: white;
    
 }
-#starter{
-    color: white;   
-}
+f
 .text1{
   
    margin-left: 650px;
@@ -108,6 +109,8 @@ body{
 .flex{
     display: flex;
     padding-top: 30px;
+    flex-wrap: wrap;
+  
     
 }
 #left{
@@ -129,6 +132,7 @@ body{
 .rightimg{
     display:flex;
     margin: 10px;
+    flex-wrap: wrap;
 }
 .pix1{
     
@@ -264,4 +268,155 @@ footer{
 .footerright{
     margin-top: 20px;
     margin-right: 100px;
+}
+@media screen and (min-device-width:481px) and (max-device-width:768px)
+{
+    
+    body{
+        width: 100%;
+        overflow-x: hidden;
+    }
+    .list li{
+       display: none;
+        
+    }   
+  
+    .list #nav{
+        display: inline;
+      
+    }
+    .list .hamburger:hover{
+        border: none;
+        padding:0;
+
+    }
+    
+}
+.list1{
+    background-color:rgba(77, 42, 119, 0.9);
+    width: 100%;
+    padding-bottom: 90%;
+    padding-top: 10px;
+    
+    
+}
+.list1 a{
+    text-decoration:none;
+    color: white;
+   
+    
+}
+.list1 li{
+    list-style-type: none;
+   font-weight: 500;
+   padding-bottom: 20px;
+
+   
+}
+.text{
+    margin-left: 20px;
+}
+.container{
+    width: 100%;
+    overflow-x:hidden ;
+}
+.text1{
+    margin-left: 0px;
+   margin-top: -300px;
+   text-align: center;
+}
+#starter{
+    color: white;
+}
+.flex{
+    
+    text-align: center;
+    justify-content: center;
+    
+}
+.left{
+   
+    margin-left: 0;
+}
+.secod{
+    background-color: rgb(3, 3, 3);
+    width: 100%;
+    height:600px;
+    padding: 10px;
+    overflow-x: hidden;
+   
+}
+.pix1{
+    
+    width: 40%;
+    height: 150px;
+    position: relative;
+   margin: 10px;
+  
+    
+}
+.pix2{
+  
+    width: 40%;
+    height: 150px;
+    position: relative;
+    margin: 10px;
+    
+}
+.rightimg{
+
+    margin: 10px;
+    justify-content: center;
+}
+.third{
+    text-align: center;
+    margin-left: 0;
+    width: 100%;
+    padding-left: 0px;
+    padding-right: 40px;
+    font-size: 15px;
+    font-weight: 0;
+    height: 100px;
+
+}
+.sky{
+    margin-left: 0;
+}
+.fifth{
+    text-align: center;
+    margin-left: 0;
+    width: 100%;
+    padding-left: 0px;
+    padding-right: 40px;
+    font-size: 15px;
+    font-weight: 0;
+    height: 250px;
+}
+input{
+    width: 80%;
+}
+.send{
+    width:50%;
+    margin-top: 10px;
+}
+footer{
+    background-color: black;
+    color: white;
+    width:100%;
+    height: 100px;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    
+    
+}
+.copy{
+    margin-left: 0;
+   
+
+}
+.footerright{
+    margin-top: 5px;
+  
 }
